@@ -163,14 +163,14 @@ This error message is issued to indicate that the heartbeat command handler
 failed while processing the command. The argument provides the reason for
 failure.
 
-% HA_HIGH_CLOCK_SKEW partner's clock is %1, please synchronize clocks!
+% HA_HIGH_CLOCK_SKEW %1, please synchronize clocks!
 This warning message is issued when the clock skew between the active servers
 exceeds 30 seconds. The HA service continues to operate but may not function
 properly, especially for low lease lifetimes. The administrator should
 should synchronize the clocks, e.g. using NTP. If the clock skew exceeds
 60 seconds, the HA service will terminate.
 
-% HA_HIGH_CLOCK_SKEW_CAUSES_TERMINATION partner's clock is %1, causing HA service to terminate
+% HA_HIGH_CLOCK_SKEW_CAUSES_TERMINATION %1, causing HA service to terminate
 This warning message is issued when the clock skew between the active servers
 exceeds 60 seconds. The HA service stops. The servers will continue to respond
 to the DHCP queries but won't exchange lease updates or send heartbeats.
@@ -360,7 +360,8 @@ lease database synchronization with the partner. The first argument specifies
 the name of the partner server. The second argument specifies the duration of
 the synchronization.
 
-% HA_TERMINATED HA service terminated because of the unacceptable clock skew; fix the problem and restart!
+% HA_TERMINATED HA service terminated due to an unrecoverable condition. Check previous error message(s), address the problem and restart!
 This error message is issued to indicate that the HA service has been stopped
-due to unacceptable clock skew. The error can be fixed by synchronizing the
-clocks on the active servers and restarting Kea.
+due to an unacceptable condition (e.g. too large of a clock skew). The exact
+cause should appear in a previous error message.  Address the condition
+reported then restart the servers to resume service.
